--- a/src/components/header.css
+++ b/src/components/header.css
@@ -38,7 +38,7 @@
 }
 
 .nav-link:hover {
-  color: #035aa6 !important;
+  color: #1DA1F2 !important;
 }
 
 /* Logo styles */
@@ -116,7 +116,7 @@
 }
 
 .hamburger:hover .bar {
-  background-color: #035aa6;
+  background-color: #1DA1F2;
 }
 
 /* Navigation styles */
